# VETER_NEXT

./: .gitignore  CHANGELOG_2025-11-11_MAVROS_INTEGRATION.md  CLAUDE.md  CODEBASE_ANALYSIS_SUMMARY.md  PROGRESS_COMPARISON_REPORT.md  README.md
client_macos/: .gitignore  README.md  launch.sh  requirements.txt  veter_control.py
docs/: ARCHITECTURE_DECISION.md  ARDUCAM_DRIVER_INSTALL.md  CAMERA_CODEC_TESTING_2025-11-12.md  CAMERA_GLOBAL_STREAMING.md  CAMERA_LATENCY_ANALYSIS.md  CAMERA_MEDIAMTX_STREAMING.md  CAMERA_OPTIMIZATION_REPORT_2025-11-12.md  CAMERA_SETUP.md  CAMERA_SRT_STREAMING.md  CAMERA_STREAMING_SUCCESS_2025-11-11.md  CAMERA_UDP_STREAMING.md  CAN_DEBUG_SESSION_NOV15.md  CAN_SETUP.md  CAN_TERMINATION_CRITICAL_FIX.md  CAN_TERMINATION_DEBUG.md  DEVELOPMENT_STATUS.md  DUAL_CAMERA_SYSTEM.md  EKF_SENSOR_FUSION.md  FIRE_SUPPRESSION_SYSTEM.md  INSTALLATION.md  ISAAC_ROS_CAMERA_TESTING.md  JETSON_CAN_INTEGRATION.md  MACOS_CLIENT.md  MAVROS_GPS_IMU_INTEGRATION.md  PIXHAWK_INTEGRATION_OPTIONS.md  PROJECT_STATUS_ANALYSIS_NOV15.md  PROJECT_STATUS_UPDATE_2025-11-11.md  PROJECT_STATUS_VS_TZ.md  README.md  SESSION_SUMMARY_CAMERA_2025-11-11.md  TAILSCALE_SETUP.md  installation_report.txt  remote-access-guide.md  ros2_installation_report.txt  vps-tunnel-setup.md
firmware/esp32_motor_controller/: CURRENT_STAGE.md  CURRENT_STATUS.md  DEVELOPMENT_LOG.md  README.md  SESSION_SUMMARY.md  TWAI_SUCCESS.md  platformio.ini  test_can_listen.cpp
firmware/esp32_motor_controller/include/: config.h  dronecan_interface.h  motor_mixing.h
firmware/esp32_motor_controller/install/: local_setup.sh  setup.sh
firmware/esp32_motor_controller/log/: latest_build
firmware/esp32_motor_controller/src/: dronecan_interface.cpp  main.cpp  motor_mixing.cpp
firmware/esp32_sensor_hub/: README.md  platformio.ini
firmware/esp32_sensor_hub/include/: config.h  dronecan_interface.h
firmware/esp32_sensor_hub/src/: dronecan_interface.cpp  main.cpp
ros2_ws/: tensorrt_benchmark.py
ros2_ws/src/veter_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/veter_bringup/config/: ekf.yaml  ekf_localization.yaml  mavros_config.yaml  navsat_transform.yaml  robot_params.yaml
ros2_ws/src/veter_bringup/launch/: camera.launch.py  camera_gscam.launch.py  mavros.launch.py  sensor_fusion.launch.py  veter_full.launch.py  veter_minimal.launch.py  veter_teleop.launch.py  web_teleop.launch.py
ros2_ws/src/veter_bringup/scripts/: camera_rtsp_server.py  camera_udp_server.py  veter.service
ros2_ws/src/veter_camera/: package.xml  setup.cfg  setup.py
ros2_ws/src/veter_camera/launch/: camera.launch.py
ros2_ws/src/veter_camera/veter_camera/: camera_publisher.py
ros2_ws/src/veter_channel_manager/: README.md  package.xml  setup.py
ros2_ws/src/veter_channel_manager/config/: channels_default.yaml  channels_long_range.yaml  channels_rc_only.yaml  channels_voice.yaml
ros2_ws/src/veter_channel_manager/launch/: channel_manager.launch.py
ros2_ws/src/veter_channel_manager/veter_channel_manager/: __init__.py  channel_health.py  channel_manager_node.py  failover_logic.py
ros2_ws/src/veter_dronecan_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/veter_dronecan_bridge/config/: dronecan_params.yaml
ros2_ws/src/veter_dronecan_bridge/launch/: dronecan_bridge.launch.py
ros2_ws/src/veter_dronecan_bridge/veter_dronecan_bridge/: __init__.py  can_interface.py  dronecan_bridge_node.py
ros2_ws/src/veter_perception/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/veter_perception/config/: yolo_params.yaml
ros2_ws/src/veter_perception/launch/: yolo_detection.launch.py
ros2_ws/src/veter_perception/veter_perception/: object_tracker.py  (+1 more)
scripts/: MANUAL_SETUP.md  STREAMING_QUICK_START.md  add-key-manual.sh  camera-rtsp.service  copy-key-to-vps.sh  enable_max_performance.sh  esp32_monitor.py  setup-vps-tunnel.sh  setup-web-interface-tunnel.sh  setup_ssh_key.py  ssh-tunnel-jetson-robot.service  start_camera_global.sh  start_camera_mediamtx.sh  start_camera_mjpeg.sh  start_camera_mjpeg_web.sh  start_camera_srt.sh  start_camera_udp.sh  start_camera_udp_global.sh  stream_yolo_detections.py  test_mjpeg.sh  udp_control_server.py  udp_telemetry_publisher.py  view_mediamtx_stream.sh  view_srt_stream.sh  view_udp_stream.sh  web-interface-tunnel.service
scripts/diagnostics/: check_installation.py
scripts/setup/: configure_can.sh
scripts/startup/: can-interface.service
web_interface/: index.html
