<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>veter_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configuration for VETER_NEXT robot</description>

  <maintainer email="jetson@veter-next.local">Eugene Melnik</maintainer>
  <license>MIT</license>

  <author email="jetson@veter-next.local">Eugene Melnik</author>
  <author email="noreply@anthropic.com">Claude Code</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>veter_dronecan_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
