<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>veter_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and configurations for VETER_NEXT robot system</description>
  <maintainer email="eugene.a.melnik@gmail.com">Eugene Melnik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- VETER custom packages -->
  <exec_depend>veter_dronecan_bridge</exec_depend>
  <exec_depend>veter_channel_manager</exec_depend>

  <!-- Navigation and control -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- MAVROS for Pixhawk integration -->
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
