<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>veter_dronecan_bridge</name>
  <version>1.0.0</version>
  <description>DroneCAN to ROS2 bridge for VETER_NEXT robot</description>

  <maintainer email="jetson@veter-next.local">Eugene Melnik</maintainer>
  <license>MIT</license>

  <author email="jetson@veter-next.local">Eugene Melnik</author>
  <author email="noreply@anthropic.com">Claude Code</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>python3-can</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
